--- a/projetos/templates/projetos/proposta_completa.html
+++ b/projetos/templates/projetos/proposta_completa.html
@@ -46,6 +46,9 @@
   {% endif %}
   <strong>Semestre:</strong> {{proposta.ano}}.{{proposta.semestre}}<br>
 
+  <a class="myButton" href="{% url 'proposta_editar' proposta.slug %}">Editar Proposta</a>
+
+  <br>
   {% if proposta.fechada %}
     <strong>Projeto fechado:</strong>
     <a href="{% url 'projeto_completo' projeto.id %}">
@@ -77,7 +80,7 @@
   {% endif %}
   <hr>
 
-  <h3>Organização Parceira:
+  <h3>Organização:
     {% if proposta.organizacao %}
       <a href="{% url 'organizacao_completo' proposta.organizacao.id %}">
         {{ proposta.organizacao.nome }}
@@ -177,6 +180,140 @@
     {% endif %}
   {% endfor %}
 
+  {% if proposta.areas_de_interesse %}
+    <br><hr>
+    <h3>Áreas de Interesse</h3>
+    <table>
+    <tr><td>&nbsp;<input disabled type="checkbox" name="selection" value="inovacao_social" 
+            {% if proposta.areas_de_interesse.inovacao_social %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Inovação Social</td>
+    </tr>
+    <tr><td>&nbsp;<input disabled type="checkbox" name="selection" value="ciencia_dos_dados" 
+            {% if proposta.areas_de_interesse.ciencia_dos_dados %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Ciência dos Dados</td>
+    </tr>
+    <tr><td>&nbsp;<input disabled type="checkbox" name="selection" value="modelagem_3D" 
+            {% if proposta.areas_de_interesse.modelagem_3D %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Modelagem 3D</td>
+    </tr>      
+    <tr><td>&nbsp;<input disabled type="checkbox" name="selection" value="manufatura" 
+            {% if proposta.areas_de_interesse.manufatura %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Manufatura</td>
+    </tr>
+    <tr><td>&nbsp;<input disabled type="checkbox" name="selection" value="resistencia_dos_materiais" 
+            {% if proposta.areas_de_interesse.resistencia_dos_materiais %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Resistência dos Materiais</td>
+    </tr>
+    <tr><td>&nbsp;<input disabled type="checkbox" name="selection" value="modelagem_de_sistemas" 
+            {% if proposta.areas_de_interesse.modelagem_de_sistemas %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Modelagem de Sistemas</td>
+    </tr>
+    <tr><td>&nbsp;<input disabled type="checkbox" name="selection" value="controle_e_automacao" 
+            {% if proposta.areas_de_interesse.controle_e_automacao %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Controle e Automação</td>
+    </tr>      
+    <tr><td>&nbsp;<input disabled type="checkbox" name="selection" value="termodinamica" 
+            {% if proposta.areas_de_interesse.termodinamica %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Termodinâmica</td>
+    </tr>
+    <tr><td>&nbsp;<input disabled type="checkbox" name="selection" value="fluidodinamica" 
+            {% if proposta.areas_de_interesse.fluidodinamica %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Fluidodinâmica</td>
+    </tr>
+    <tr><td>&nbsp;<input disabled type="checkbox" name="selection" value="eletronica_digital" 
+            {% if proposta.areas_de_interesse.eletronica_digital %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Eletrônica Digital</td>
+    </tr>
+    <tr><td>&nbsp;<input disabled type="checkbox" name="selection" value="programacao" 
+            {% if proposta.areas_de_interesse.programacao %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Programação</td>
+    </tr>      
+    <tr><td>&nbsp;<input disabled type="checkbox" name="selection" value="inteligencia_artificial" 
+            {% if proposta.areas_de_interesse.inteligencia_artificial %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Inteligência Artificial</td>
+    </tr>
+    <tr><td>&nbsp;<input disabled type="checkbox" name="selection" value="computacao_em_nuvem" 
+            {% if proposta.areas_de_interesse.computacao_em_nuvem %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Computação em Nuvem</td>
+    </tr>
+    <tr><td>&nbsp;<input disabled type="checkbox" name="selection" value="banco_de_dados" 
+            {% if proposta.areas_de_interesse.banco_de_dados %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Banco de Dados</td>
+    </tr>
+    <tr><td>&nbsp;<input disabled type="checkbox" name="selection" value="visao_computacional" 
+            {% if proposta.areas_de_interesse.visao_computacional %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Visão Computacional</td>
+    </tr>      
+    <tr><td>&nbsp;<input disabled type="checkbox" name="selection" value="computacao_de_alto_desempenho" 
+            {% if proposta.areas_de_interesse.computacao_de_alto_desempenho %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Computação de Alto Desempenho</td>
+    </tr>
+    <tr><td>&nbsp;<input disabled type="checkbox" name="selection" value="robotica" 
+            {% if proposta.areas_de_interesse.robotica %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Robótica</td>
+    </tr>
+    <tr><td>&nbsp;<input disabled type="checkbox" name="selection" value="realidade_virtual_aumentada" 
+            {% if proposta.areas_de_interesse.realidade_virtual_aumentada %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Realidade Virtual/Aumentada</td>
+    </tr>
+    <tr><td>&nbsp;<input disabled type="checkbox" name="selection" value="protocolos_de_comunicacao" 
+            {% if proposta.areas_de_interesse.protocolos_de_comunicacao %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Protocolos de Comunicação</td>
+    </tr>      
+    <tr><td>&nbsp;<input disabled type="checkbox" name="selection" value="eficiencia_energetica" 
+            {% if proposta.areas_de_interesse.eficiencia_energetica %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Eficiência Energética</td>
+    </tr>
+    <tr><td>&nbsp;<input disabled type="checkbox" name="selection" value="administracao_economia_financas" 
+            {% if proposta.areas_de_interesse.administracao_economia_financas %}checked{% endif %}>&nbsp;
+        </td>
+        <td>Administração, Economia e Finanças</td>
+    </tr>
+    </table>
+    {% if proposta.areas_de_interesse.outras %}
+      Outras: {{proposta.areas_de_interesse.outras}}
+    {% endif %}
+  {% endif %}
+
+
+  {% if proposta.recomendada_set.all %}
+  <br><hr>
+  <h3>Disciplina(s) Recomendada(s)</h3>
+  <table>
+    <tr>
+      <th>
+        Disciplina
+      </th>
+    </tr>
+    {% for rec in proposta.recomendada_set.all %}
+    <tr><td>
+        {{rec.disciplina.nome}}
+    </td></tr>
+    {% endfor %}
+  </table>
+  {% endif %}
+
+
   <br><hr>
   <h3>Perfil de Alunos Desejados para Proposta de Projeto</h3>
   <table>
@@ -232,155 +369,33 @@
     </tr>
   </table>
 
-  {% if proposta.recomendada_set.all %}
-  <br><hr>
-  <h3>Disciplina(s) Recomendada(s)</h3>
-  <table>
-    <tr>
-      <th>
-        Disciplina
-      </th>
-    </tr>
-    {% for rec in proposta.recomendada_set.all %}
-    <tr><td>
-        {{rec.disciplina.nome}}
-    </td></tr>
-    {% endfor %}
-  </table>
-  {% endif %}
-
-
-
-  {% if proposta.areas_de_interesse %}
-    <br><hr>
-    <h3>Áreas de Interesse</h3>
-    <table>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="inovacao_social" 
-            {% if proposta.areas_de_interesse.inovacao_social %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Inovação Social</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="ciencia_dos_dados" 
-            {% if proposta.areas_de_interesse.ciencia_dos_dados %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Ciência dos Dados</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="modelagem_3D" 
-            {% if proposta.areas_de_interesse.modelagem_3D %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Modelagem 3D</td>
-    </tr>      
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="manufatura" 
-            {% if proposta.areas_de_interesse.manufatura %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Manufatura</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="resistencia_dos_materiais" 
-            {% if proposta.areas_de_interesse.resistencia_dos_materiais %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Resistência dos Materiais</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="modelagem_de_sistemas" 
-            {% if proposta.areas_de_interesse.modelagem_de_sistemas %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Modelagem de Sistemas</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="controle_e_automacao" 
-            {% if proposta.areas_de_interesse.controle_e_automacao %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Controle e Automação</td>
-    </tr>      
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="termodinamica" 
-            {% if proposta.areas_de_interesse.termodinamica %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Termodinâmica</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="fluidodinamica" 
-            {% if proposta.areas_de_interesse.fluidodinamica %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Fluidodinâmica</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="eletronica_digital" 
-            {% if proposta.areas_de_interesse.eletronica_digital %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Eletrônica Digital</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="programacao" 
-            {% if proposta.areas_de_interesse.programacao %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Programação</td>
-    </tr>      
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="inteligencia_artificial" 
-            {% if proposta.areas_de_interesse.inteligencia_artificial %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Inteligência Artificial</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="computacao_em_nuvem" 
-            {% if proposta.areas_de_interesse.computacao_em_nuvem %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Computação em Nuvem</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="banco_de_dados" 
-            {% if proposta.areas_de_interesse.banco_de_dados %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Banco de Dados</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="visao_computacional" 
-            {% if proposta.areas_de_interesse.visao_computacional %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Visão Computacional</td>
-    </tr>      
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="computacao_de_alto_desempenho" 
-            {% if proposta.areas_de_interesse.computacao_de_alto_desempenho %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Computação de Alto Desempenho</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="robotica" 
-            {% if proposta.areas_de_interesse.robotica %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Robótica</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="realidade_virtual_aumentada" 
-            {% if proposta.areas_de_interesse.realidade_virtual_aumentada %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Realidade Virtual/Aumentada</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="protocolos_de_comunicacao" 
-            {% if proposta.areas_de_interesse.protocolos_de_comunicacao %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Protocolos de Comunicação</td>
-    </tr>      
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="eficiencia_energetica" 
-            {% if proposta.areas_de_interesse.eficiencia_energetica %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Eficiência Energética</td>
-    </tr>
-    <tr><td>&nbsp;<input type="checkbox" name="selection" value="administracao_economia_financas" 
-            {% if proposta.areas_de_interesse.administracao_economia_financas %}checked{% endif %}>&nbsp;
-        </td>
-        <td>Administração, Economia e Finanças</td>
-    </tr>
-    </table>
-    {% if proposta.areas_de_interesse.outras %}
-      Outras: {{proposta.areas_de_interesse.outras}}
-    {% endif %}
-  {% endif %}
 
   <p>&nbsp;</p>
+  <form method="post" id="disponibilizacaoform" enctype="multipart/form-data">
+    {% csrf_token %}
+    <br><b><label for="autorizador">Autorizado por</label></b>:
+    <select name="autorizador" id="autorizador" title="Selecione quem autorizou proposta" required>
+        <option value='0'> ---- </option>
+        {% for pessoa in comite %}
+          <option value="{{pessoa.id}}" {% if pessoa.id == proposta.autorizado.id %}selected{% endif %}>
+            {{pessoa}}
+          </option>  
+        {% endfor %}
+    </select>
 
-  <br><b><label for="autorizador">Autorizado por</label></b>:
-  <select name="autorizador" id="autorizador" title="Selecione quem autorizou proposta" required>
-      <option disabled selected value> -- selecione alguém -- </option>
-      {% for pessoa in comite %}
-        <option value="{{pessoa.id}}" {% if pessoa.id == proposta.membro1.id %}selected{% endif %}>
-          {{pessoa}}
-        </option>  
-      {% endfor %}
-  </select><br>
+    <br><b>Disponibilizar: </b>
+    <label><input type="radio" name="disponibilizar" value="sim"
+      {% if proposta.disponivel %}checked{% endif %}
+    > Sim</label>
+    <label><input type="radio" name="disponibilizar" value="nao"
+      {% if not proposta.disponivel %}checked{% endif %}
+    > Não</label>
+
+    <br><br>
+    <button type="submit">Enviar</button>
+  </form>
 
   <p>&nbsp;</p>
-
-  <a class="myButton" href="{% url 'proposta_editar' proposta.slug %}">Editar Proposta</a>
 
   <p>&nbsp;</p>
 
