--- a/users/templates/users/alunos_lista.html
+++ b/users/templates/users/alunos_lista.html
@@ -29,11 +29,11 @@
   </select>
   <br>
 
-  <b>Informações: </b>&nbsp;&nbsp;
-  <label><input onchange="($(this).prop('checked') ? $('#AlunosTable tr > *:nth-child(2)').show() : $('#AlunosTable tr > *:nth-child(2)').hide())" type="checkbox" checked />e-mail</label>&nbsp;&nbsp;&nbsp;
-  <label><input onchange="($(this).prop('checked') ? $('#AlunosTable tr > *:nth-child(3)').show() : $('#AlunosTable tr > *:nth-child(3)').hide())" type="checkbox" checked />Curso</label>&nbsp;&nbsp;&nbsp;
-  <label><input onchange="($(this).prop('checked') ? $('#AlunosTable tr > *:nth-child(4)').show() : $('#AlunosTable tr > *:nth-child(4)').hide())" type="checkbox" checked />Período</label>&nbsp;&nbsp;&nbsp;
-  <label><input onchange="($(this).prop('checked') ? $('#AlunosTable tr > *:nth-child(5)').show() : $('#AlunosTable tr > *:nth-child(5)').hide())" type="checkbox" checked />Projeto</label>&nbsp;&nbsp;&nbsp;
+  <b>Informações: </b>&nbsp;
+  <label><input onchange="($(this).prop('checked') ? $('#AlunosTable tr > *:nth-child(2)').show() : $('#AlunosTable tr > *:nth-child(2)').hide())" type="checkbox" checked /> e-mail</label>&nbsp;&nbsp;&nbsp;
+  <label><input onchange="($(this).prop('checked') ? $('#AlunosTable tr > *:nth-child(3)').show() : $('#AlunosTable tr > *:nth-child(3)').hide())" type="checkbox" checked /> Curso</label>&nbsp;&nbsp;&nbsp;
+  <label><input onchange="($(this).prop('checked') ? $('#AlunosTable tr > *:nth-child(4)').show() : $('#AlunosTable tr > *:nth-child(4)').hide())" type="checkbox" checked /> Período</label>&nbsp;&nbsp;&nbsp;
+  <label><input onchange="($(this).prop('checked') ? $('#AlunosTable tr > *:nth-child(5)').show() : $('#AlunosTable tr > *:nth-child(5)').hide())" type="checkbox" checked /> Projeto</label>&nbsp;&nbsp;&nbsp;
   
   <br><br>
   <strong>Número Total de Alunos:</strong> {{ num_alunos }}
@@ -45,7 +45,11 @@
             <th onclick="w3.sortHTML('#AlunosTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">e-mail</th>
             <th onclick="w3.sortHTML('#AlunosTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Curso</th>
             <th onclick="w3.sortHTML('#AlunosTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Período</th>
-            <th onclick="w3.sortHTML('#AlunosTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">Projeto</th>
+            <th onclick="w3.sortHTML('#AlunosTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">
+              <a data-toggle="tooltip" data-html="true" animation="true" title="<small>Projetos <u>sublinhados</u> são de PFE Avançado</small>">
+                Projeto
+              </a>
+            </th>
         </tr>
         {% for aluno in alunos_list %} 
         <tr class="item">
@@ -119,7 +123,6 @@
         </tr>
         {% endfor %}
       </table>
-      <small>Projetos <u>sublinhados</u> são de PFE Avançado</small>
       <br>
   {% else %}
     <p>Não existem alunos disponíveis.</p>
