maiores descrições nos projetos

--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -11,6 +11,14 @@
   <style>
     .prioridade {display: inline}
   </style>
+  <style>
+    #logotipo_left {
+      max-height:64px;
+      max-width:128px;
+      height:auto;
+      width:auto;
+    }
+  </style>
 {% endblock %}
 
 {% block content %}
@@ -32,6 +40,9 @@
     {% for projeto,prioridades in mylist %} 
       {% if projeto.disponivel %}
         <tr id="two" class="row" data-type="{{projeto.ano}}.{{projeto.semestre}}"><td id="ptd">
+        {% if projeto.organizacao.logotipo %}
+          <img id="logotipo_left" src="{{ projeto.organizacao.logotipo.url }}" alt="{{ projeto.organizacao.sigla }}"><br>
+        {% endif %}
         <a href="{% url 'projeto_completo' projeto.id %}" class="dark-blue-bold"> 
           {% if projeto.titulo_final %}
             {{projeto.titulo_final}}<br>
@@ -40,6 +51,11 @@
             {{projeto.titulo}}<br>
           {% endif %}
         </a>
+        {% if projeto.descricao %}
+          <small>Descrição projeto: {{projeto.descricao}}</small><br>
+        {% else %}
+          <small>Descrição proposta: {{projeto.proposta.descricao}}</small><br>
+        {% endif %}
         <p style="margin-left:1em;">Organização: <a href="{% url 'organizacao_completo' projeto.organizacao.id %}">
             {{ projeto.organizacao.nome }}
           </a></p>
@@ -47,18 +63,23 @@
           <p style="margin-left:1em;">Tipo: <font color="red">PFE Avançado</font></p>
         {% endif %}
         <p style="margin-left:1em;">Edição: {{projeto.ano}}.{{projeto.semestre}}</p>
-        <p style="margin-left:1em;">Orientador: {{projeto.orientador.user.get_full_name}} &lt;{{projeto.orientador.user.email}}&gt; </p>
+        <p style="margin-left:1em;">Orientador: 
+          <a href="{% url 'professor_detail' projeto.orientador.id %}"> {{projeto.orientador.user.get_full_name}}</a>
+          <a href="mailto:{{projeto.orientador.user.email}}"> &lt;{{projeto.orientador.user.email}}&gt;</a>
+        </p>
         <p style="margin-left:1em;">Alunos:</p>
         <ol>
-        {% for aluno,prioridade in prioridades %} 
-          <li><a href="{% url 'aluno_detail' aluno.id %}">{{aluno.user.get_full_name}} &lt;{{aluno.user.email}}&gt; [{{ aluno.get_curso_display }}] &nbsp;
+        {% for aluno,prioridade in prioridades %}
+          <li><a href="{% url 'aluno_detail' aluno.id %}">{{aluno.user.get_full_name}}</a>
+              <a href="mailto:{{aluno.user.email}}">&lt;{{aluno.user.email}}&gt;</a>
+              [{{ aluno.get_curso_display }}] &nbsp;
             {% if prioridade == 0 %}
               (prioridade não definida)
             {% else %}
               (prioridade # <div class="prioridade">{{prioridade}}</div>)
             {% endif %}
             { {{ aluno.alocacao_set.first.get_conceito_display }} }
-          </a></li>
+          </li>
         {% endfor %}
         </ol>
         <br>
