--- a/projetos/templates/projetos/proposta_detalhes.html
+++ b/projetos/templates/projetos/proposta_detalhes.html
@@ -5,50 +5,160 @@
     Data: 15 de Maio de 2019
 {% endcomment %}
 
+{% block head %}
+  {% load static %}
+  <script>
+    $(document).ready(function(){
+      $('[data-toggle="tooltip"]').tooltip();
+    });
+  </script>
+{% endblock %}
+
 {% block content %}
-  {% if projeto.titulo_final %}
-    <style>
-        h3 {display: inline;}
-    </style>
-    <h3>Título: {{projeto.titulo_final}}</h3>
-    <small> <br>&nbsp;&nbsp;&nbsp;&nbsp;Título Provisório: {{projeto.titulo}}</small><br>
+  {% if proposta.titulo %}
+    <h3 data-toggle="tooltip" data-html="true" animation="true" title="
+     Título provisório para a proposta de projeto.
+     Durante a execução do projeto o título poderá/deverá sofrer atualizações.
+    ">
+      Título: {{proposta.titulo}}<br>
+    </h3>
   {% else %}
-    <h3>Título: {{projeto.titulo}}</h3>
+    <h5>Problema na identificação do título<br></h5>
   {% endif %}
 
-  <strong>Descrição:</strong> {{ projeto.proposta.descricao|linebreaks }}
-  {% if projeto.expectativas %}
-    <br><strong>Expectativas de resultados/entregas :</strong> {{ projeto.proposta.expectativas|linebreaks }}
-  {% endif %}  
-
-  {% comment %}
-  {% if projeto.areas %}
-    <br><strong>Áreas da engenharia envolvidas no projeto (habilidade necessárias):</strong> {{ projeto.areas|linebreaks }}
+  {% if proposta.descricao %}
+    <p>
+      <strong data-toggle="tooltip" data-html="true" animation="true" title="
+      Uma breve descrição do que se trata o projeto e outras informações relevantes.
+      ">
+        Descrição:
+      </strong>
+      {{proposta.descricao|linebreaks|urlize}}<br>
+    </p>
+  {% else %}
+    <p><u>Campo de descrição ausente.<u><br></p>
+    <!-- Campo deveria ser obrigatório -->
   {% endif %}
-  {% endcomment %}
 
-  {% if projeto.recursos %}
-    <br><strong>Recursos a serem disponibilizados aos Alunos :</strong> {{ projeto.proposta.recursos|linebreaks }}
+  {% if proposta.expectativas %}
+    <p>
+      <strong data-toggle="tooltip" data-html="true" animation="true" title="
+      Exemplos de resultados ou entregas esperadas.
+      Durante o projeto isso deverá ser dicutido com a organização parceira e com os professores orientadores para um melhor alinhamento.
+      Independente do que as organizações sugerirem nesse campo, existem uma série de relatórios, apresentações, vídeos e outros materiais como obrigatórios no PFE.
+      ">
+        Expectativas de resultados/entregas:
+      </strong>
+      {{proposta.expectativas|linebreaks|urlize}}<br>
+    <p>
+  {% else %}
+    <p><u>Campo de expectativas ausente.<u><br></p>
+    <!-- Campo deveria ser obrigatório -->
   {% endif %}
-  {% if projeto.observacoes %}
-    <br><strong>Outras observações :</strong> {{ projeto.proposta.observacoes|linebreaks }}<br>
+
+  {% if proposta.recursos %}
+    <p>
+      <strong data-toggle="tooltip" data-html="true" animation="true" title="
+      Recursos que as organizações informaram que irão disponibilizar para os estudantes.
+      O PFE irá auxiliar em um acesso facilitado para os diversos laboratórios da escola conforme sua disponibiidade.
+      Não existe nenhuma garantia que o PFE irá suprir material de consumo para os alunos, em geral não há recursos para isso.
+      ">
+        Recursos a serem disponibilizados:
+      </strong>
+      {{proposta.recursos|linebreaks|urlize}}<br>
+    </p>
+  {% endif %}
+
+  {% if proposta.observacoes %}
+    <p>
+      <strong data-toggle="tooltip" data-html="true" animation="true" title="
+      Outras observações que a organização parceira considerou relevante para informar aos estudantes.
+      ">
+        Outras observações:
+      </strong>
+      {{proposta.observacoes|linebreaks|urlize}}<br>
+    </p>
   {% endif %}
   
-  {% if projeto.anexo %}
-    <br><strong>Anexo :</strong>
-    <a class="text-success" href="../..{{MEDIA_URL}}{{projeto.anexo}}">{{projeto.proposta.anexo}}</a>
+  {% if proposta.anexo %}
+    <p>
+      <strong>Anexo :</strong>
+      <a class="text-success" href="../..{{MEDIA_URL}}{{proposta.anexo}}">{{proposta.anexo}}</a>
+    </p>
   {% endif %}
+
   <hr>
-  <h3>Organização Parceira: {{ projeto.organizacao.nome }}</h3>
-  <p><strong>endereço:</strong> <a class="tabulado" href="http://maps.google.com/maps?q={{projeto.organizacao.endereco}}">{{ projeto.organizacao.endereco|linebreaks }}</a></p>
-  {% if projeto.organizacao.website %}
-    <p><strong>website:</strong>  <a class="tabulado" href="{{ projeto.organizacao.website }}"> {{ projeto.organizacao.website }} </a></p>
-  {% endif %}  
-  {% if projeto.organizacao.informacoes %}
-    <strong>Informações sobre a empresa :</strong> {{ projeto.organizacao.informacoes|linebreaks }}
+
+  <h4 data-toggle="tooltip" data-html="true" animation="true" title="
+     Nome da organização/empresa que está propondo o projeto.
+    ">
+    Organização:
+    {% if proposta.nome_organizacao %}
+      {{proposta.nome_organizacao}}
+    {% elif proposta.organizacao and proposta.organizacao.nome %}
+      {{proposta.organizacao.nome}}
+    {% else %}
+      <u>Organização não definida.</u>
+    {% endif %}
+    <br>
+  </h4>
+  
+  <p>
+    {% if proposta.endereco %}
+      <strong data-toggle="tooltip" data-html="true" animation="true" title="
+       Endereço onde os alunos deverão se deslocar para desenvolver o projeto.
+      ">
+       Endereço Local:
+      </strong>
+      <a href="http://maps.google.com/maps?q={{proposta.endereco}}">
+        {{proposta.endereco|linebreaks}}
+      </a>
+    {% elif proposta.organizacao and proposta.organizacao.endereco %}
+      <strong data-toggle="tooltip" data-html="true" animation="true" title="
+       Endereço da matriz da organização parceira.
+      ">
+       Endereço Matriz:
+      </strong>
+      <a href="http://maps.google.com/maps?q={{proposta.organizacao.endereco}}">
+        {{proposta.organizacao.endereco|linebreaks}}
+      </a>
+    {% else %}
+      <u>não definido.</u>
+    {% endif %}
+    <br>
+  </p>
+
+  <p>
+    <strong data-toggle="tooltip" data-html="true" animation="true" title="
+     Site da organização e/ou projeto.
+    ">
+    website:
+    </strong>
+    {% if proposta.website %}
+      <a class="tabulado" href="{{proposta.website}}">{{proposta.website}}</a>
+    {% elif proposta.organizacao and proposta.organizacao.website %}
+      <a class="tabulado" href="{{proposta.organizacao.website}}">{{proposta.organizacao.website}}</a>
+    {% else %}
+      <u>não definido.</u>
+    {% endif %}
+    <br><br>
+  </p>
+
+  <!-- Campo opcional -->
+  {% if proposta.descricao_organizacao %}    
+    <p><strong>Informações sobre a empresa:</strong>
+    {{proposta.descricao_organizacao|linebreaks|urlize}}
+    <br></p>
+  {% elif proposta.organizacao and proposta.organizacao.informacoes %}
+    <p><strong>Informações sobre a empresa:</strong>
+    {{proposta.organizacao.informacoes|linebreaks|urlize}}
+    <br></p>
   {% endif %}
-  {% if projeto.departamento %}
-    <strong>Informações sobre o departamento na empresa :</strong> {{ projeto.departamento|linebreaks }}
+
+  <!-- Campo opcional -->
+  {% if proposta.departamento %}
+    <p><strong>Informações sobre o departamento na organização:</strong>
+    {{proposta.departamento|linebreaks|urlize}}<br></p>
   {% endif %}
 
   <p>&nbsp;</p>
