--- a/projetos/templates/projetos/minhas_bancas.html
+++ b/projetos/templates/projetos/minhas_bancas.html
@@ -29,11 +29,11 @@
           {% endif %}
           {% if banca.projeto %}
             <b>Título do Projeto:</b> 
-            <a href="{% url 'projeto_detalhe' banca.projeto.id %}">
+            <a href="{% url 'projeto_detalhes' banca.projeto.id %}">
               {% if banca.projeto.titulo_final %}
                 {{banca.projeto.titulo_final}}</a><br>
                 <small>Antigo Título Provisório: 
-                  <a href="{% url 'projeto_detalhe' banca.projeto.id %}">{{banca.projeto.titulo}}</a>
+                  <a href="{% url 'projeto_detalhes' banca.projeto.id %}">{{banca.projeto.titulo}}</a>
                 </small>
               {% else %}
                 {{banca.projeto.titulo}}</a>
