--- a/projetos/templates/projetos/meuprojeto_aluno.html
+++ b/projetos/templates/projetos/meuprojeto_aluno.html
@@ -8,12 +8,11 @@
 {% block content %}
 
   {% if aluno.alocacao_set.all.count > 0 %}
-    <hr>
     <h3>Projeto Alocado</h3>
     <br><br>
     {% for alocado in aluno.alocacao_set.all %}
 
-      <h2>{{alocado.projeto.ano}}.{{alocado.projeto.semestre}}</h2>
+      <h4>[{{alocado.projeto.ano}}.{{alocado.projeto.semestre}}]</h4>
       
       {% if alocado.projeto.ano == configuracao.ano and alocado.projeto.semestre == configuracao.semestre and not configuracao.liberados_projetos %}
 
@@ -27,35 +26,38 @@
                   display: inline;
               }
           </style>
-          <h3>Título: {{alocado.projeto.titulo_final}}</h3>
-          <small> <br>&nbsp;&nbsp;&nbsp;&nbsp;Título Provisório: {{alocado.projeto.titulo}}</small><br>
+          <h3>Título: {{alocado.projeto.titulo_final}}<br></h3>
+          <small>&nbsp;&nbsp;&nbsp;&nbsp;Título Provisório: {{alocado.projeto.titulo}}</small><br>
         {% else %}
-            <h3>Título: {{alocado.projeto.titulo}}</h3>
+            <h3>Título: {{alocado.projeto.titulo}}<br></h3>
         {% endif %}
-        <strong>Descrição:</strong> {{ alocado.projeto.proposta.descricao|linebreaks }}<br>
-        <strong>Expectativas de resultados/entregas :</strong> {{ alocado.projeto.proposta.expectativas|linebreaks }}<br>
-        {% comment %}
-          <strong>Áreas da engenharia envolvidas no projeto (habilidade necessárias):</strong> {{ alocado.projeto.areas|linebreaks }}<br>
-        {% endcomment %}
-        <strong>Recursos a serem disponibilizados aos Alunos :</strong> {{ alocado.projeto.proposta.recursos|linebreaks }}<br>
-        <strong>Outras observações :</strong> {{ alocado.projeto.proposta.observacoes|linebreaks }}<br>
+        <br>
+        
+        <strong>Descrição:</strong> {{alocado.projeto.proposta.descricao|linebreaks|urlize}}<br>
+
+        <strong>Expectativas de resultados/entregas :</strong> {{alocado.projeto.proposta.expectativas|linebreaks|urlize}}<br>
+
+        <strong>Recursos a serem disponibilizados aos Alunos :</strong> {{ alocado.projeto.proposta.recursos|linebreaks|urlize}}<br>
+        {% if alocado.projeto.proposta.observacoes %}
+          <strong>Outras observações :</strong> {{ alocado.projeto.proposta.observacoes|linebreaks|urlize}}<br>
+        {% endif %}
 
         <hr>
 
-        <h3>Organizacao: {{ alocado.projeto.organizacao.nome }}</h3>
-        <strong>endereço:</strong> {{ alocado.projeto.organizacao.endereco|linebreaks }}
-        <strong>website:</strong> <a href="{{ projeto.organizacao.website }}"> {{ alocado.projeto.organizacao.website }} </a>
+        <h4>Organização: {{ alocado.projeto.organizacao.nome }}<br></h4><br>
+        <strong>endereço:</strong> {{ alocado.projeto.organizacao.endereco|linebreaks }}<br>
+        <strong>website:</strong> <a href="{{ projeto.organizacao.website }}">{{ alocado.projeto.organizacao.website }}</a><br>
 
         {% if alocado.projeto.orientador %}
         <hr>
-        <h3>Orientador</h3>
+        <h5>Orientador(a)<br></h5>
         <ul>
-            <li><a href="mailto:{{projeto.orientador.user.email}}">{{ alocado.projeto.orientador.user.get_full_name}} &lt;{{projeto.orientador.user.email}}&gt; </a></li>
+            <li><a href="mailto:{{alocado.projeto.orientador.user.email}}">{{ alocado.projeto.orientador.user.get_full_name}} &lt;{{alocado.projeto.orientador.user.email}}&gt; </a></li>
         </ul>
         {% endif %}
 
         <hr>
-        <h3>Grupo</h3>
+        <h5>Grupo</h5>
         <ul>
         {% for membro in alocado.projeto.alocacao_set.all %} 
         <li><a href="mailto:{{membro.aluno.user.email}}">{{membro.aluno.user.get_full_name}} &lt;{{membro.aluno.user.email}}&gt; [{{ membro.aluno.get_curso_display }}]
