--- a/users/templates/users/areas_interesse.html
+++ b/users/templates/users/areas_interesse.html
@@ -6,6 +6,11 @@
 {% endcomment %}
 
 {% block content %}
+
+    {% if mensagem %}
+        <h2 class="red-bold">{{mensagem}}</h2>
+    {% endif %}
+
     <h3>Áreas de Interesse</h3>
     <form method="post">
         {% csrf_token %}
