--- a/projetos/templates/projetos/selecao_propostas.html
+++ b/projetos/templates/projetos/selecao_propostas.html
@@ -10,10 +10,16 @@
 
 {% block content %}
 
-    {% if ano != user.aluno.anoPFE or semestre != user.aluno.semestrePFE %}
-       <h2 class="red-bold">Você não está registrado para o PFE em {{ano}}.{{semestre}}</h2>
-       <h3 class="red-bold">Caso acredite que existe algum erro na informação, por favor contactar a coordenação do PFE</h3>
-       <br>
+    {% if vencido %}
+      <h2 class="red-bold">Você não está cadastrado como aluno.</h2>
+    {% else %}
+
+      {% if ano != user.aluno.anoPFE or semestre != user.aluno.semestrePFE %}
+        <h2 class="red-bold">Você não está registrado para o PFE em {{ano}}.{{semestre}}</h2>
+        <h3 class="red-bold">Caso acredite que existe algum erro na informação, por favor contactar a coordenação do PFE</h3>
+        <br>
+      {% endif %}
+
     {% endif %}
     
     <h3>Propostas de Projetos Disponíveis</h3>
@@ -25,7 +31,8 @@
             {% if proposta.disponivel %}
               <tr>
                 <td>
-                  <select id="selection{{proposta.pk}}" name="selection{{proposta.pk}}" ></select>
+                  <select id="selection{{proposta.pk}}" name="selection{{proposta.pk}}" 
+                  {% if vencido %}disabled{% endif %}></select>
                   <script type="text/javascript">
                     var select = document.getElementById("selection{{proposta.pk}}");
                     select.options[select.options.length] = new Option("--", 0);
@@ -70,7 +77,8 @@
           {{warnings|linebreaks}}
         </font>
 
-        <input type="submit" value="Enviar">
+        
+        <input type="submit" value="Enviar" {% if vencido %}disabled{% endif %}>
 
         <small><font color="red">
           Selecione ao menos 5 propostas de projetos (1 ao 5), sendo 1 para a que você tem mais interesse.
