--- a/projetos/templates/projetos/histograma.html
+++ b/projetos/templates/projetos/histograma.html
@@ -22,90 +22,42 @@
 {% endblock %}
 
 {% block content %}
+
   <label for="filter">Edição:</label>
-  <select id="filter" class="filter" data-tableId="projetos">
-    <option value="2018.2">2018.2</option>
-    <option value="2019.1">2019.1</option>
-    <option value="2019.2">2019.2</option>
-    <option value="2020.1" selected="selected">2020.1</option>
-    <option value="2020.2">2020.2</option>
+  <select id="filter" class="filter" data-tableId="projetos"
+  {% comment %}onchange="location = this.options[this.selectedIndex].value;"{% endcomment %}>
+    {% for loop in loop_anos %}
+      <option value="{{loop}}.2" {% if ano == loop and semestre == 2 %}selected{% endif %}>{{loop}}.2</option>
+      <option value="{{loop|add:1}}.1" {% if ano == loop|add:1 and semestre == 1 %}selected{% endif %}>{{loop|add:1}}.1</option>
+    {% endfor %}
   </select>
-  <br>
 
-  {% if mylist %}
-    <div class="2areas2">
-      <ul style="padding:0;" class="chart">
-        <h3><li class="title" title="Procura dos Projetos"></li></h3>
-        <li></li>
-        <li></li>
-
-        {% for proposta,opcoes in mylist %} 
-            <a href="{% url 'proposta_completa' proposta.id %}"> 
-              <li class="title" title="
-              {% if not proposta.disponivel%}X{% endif %}
-              {{ forloop.counter }}&ordm; :
-              {{proposta.titulo}}
-              ({{ proposta.organizacao.nome }})"></li>
-            </a>
-            <li class="past" title="">
-              <span class="bar" data-number="{{opcoes}}"></span>
-              <span class="number">{{opcoes}}</span>
-            </li>
-            <li></li>
-        {% endfor %}
-      </ul>
-    </div>
-  
-    {% comment %}
-      <script type="text/javascript">
-        $(".filter").change(function() {
-          var filterValue = $(this).val();
-          var row = $('.row'); 
-          row.hide()
-          var count_projects = 0
-          var count_alunos = 0
-          row.each(function(i, el) {
-              if($(el).attr('data-type') == filterValue) {
-                  $(el).show();
-                  count_projects = count_projects + 1
-                  count_alunos = count_alunos + $(el).find("TD").find("OL").children().length;
-              }
-          });
-          if ("todas" == filterValue) {
-            count_projects = {{ length }}
-            count_alunos = {{ nalunos }}
-            row.show();
-          }
-          document.getElementById("myCountProj").innerHTML = count_projects;
-          document.getElementById("myCountAlun").innerHTML = count_alunos
-        });
-      </script>
-    {% endcomment %}
-
-  {% else %}
-    <p>Não existem projetos disponíveis.</p>
-  {% endif %}
+  <div class="2areas2"></div>
 
   <script>
-      $(".filter").change(function(){
-          var topicId = $(".filter option:selected").attr("value");
-          $.ajax({
-              type: "POST",
-              url: "{% url 'histograma' %}",
-              data: {
-                  topicId: topicId,
-                  'csrfmiddlewaretoken': '{{ csrf_token }}',
-              },
-              success: function(response){
-                  $("div.2areas2").replaceWith($("div.2areas2",response));
-                  bar();
-              },
-              error: function(response) {
-                  alert('error');
-              }
+  
+    function carrega_semestre(){
+        var anosemestre = $(".filter option:selected").attr("value");
+        $.ajax({
+            type: "POST",
+            url: "{% url 'histograma_ajax' %}",
+            data: {
+                anosemestre: anosemestre,
+                'csrfmiddlewaretoken': '{{ csrf_token }}',
+            },
+            success: function(response){
+                $("div.2areas2").replaceWith($("div.2areas2",response));
+                bar();
+            },
+            error: function(response) {
+                alert('error');
+            }
+        });
+    }
 
-          });
-      });
+    $(".filter").change(carrega_semestre);    
+    $(document).ready(carrega_semestre);
+
   </script>
 
 {% endblock %}
